@@ -6,6 +6,7 @@ Version 0.5.6 (unreleased)
 * Updated documentation (Fixes #122, thanks @claudep)
 * Test against Django 2.0b1
 * Return a Ranged Response when returning WAV audio to support Safari (Fixes #123, thanks @po5i)
+* Optionally inject brown noise into the generated WAV audio file, to avoid rainbow-table attacks (Fixes #124, thanks @appleorange1)
 
 
 Version 0.5.5
